--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "redux-thunk": "^2.2.0",
     "resolve-url-loader": "^1.4.3",
     "sass-loader": "^3.2.0",
+    "sort-by": "^1.2.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
@@ -49,6 +50,7 @@
     "react-dom": "^15.0.1",
     "react-redux": "^5.0.5",
     "react-router": "^2.0.1",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "sort-object": "^3.0.2"
   }
 }
