--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "estraverse-fb": "^1.3.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "immutable": "^3.8.1",
     "imports-loader": "^0.6.5",
     "node-sass": "^3.4.2",
     "postcss-import": "^8.0.2",
     "postcss-loader": "^0.8.2",
+    "redux-immutable": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "resolve-url-loader": "^1.4.3",
