--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-sass": "^3.4.2",
     "postcss-import": "^8.0.2",
     "postcss-loader": "^0.8.2",
+    "react-edit-inline": "^1.0.8",
     "redux-immutable": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
